# PlotGPM

./: .gitignore  Makefile  Makefile.mk  PlotGPM-gui.spec  _version.py  baseline_flow_data_2008  config.ini  config.py  main.py  plot.py  pyproject.toml
ui/: mainwindow.py  mainwindow_ui.py  mainwindow_ui.ui
