[project]
name = "plotgpm"
version = "0.1.0"
description = "Plot a scatter graph of water flow in GPM at given pressures."
requires-python = ">=3.14.5"
dependencies = [
    "matplotlib>=3.11.0",
    "pyside6>=6.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "icecream>=2.1.4",
    "pyinstaller>=6.12.0",
]
